--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,27 +13,15 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.android.popularmoviesstage1.MainActivity">
+    android:layout_height="match_parent">
 
-    <ScrollView
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/movie_grid"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/movie_grid"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:columnWidth="90dp"
-            android:gravity="center"
-            android:horizontalSpacing="10dp"
-            android:numColumns="auto_fit"
-            android:stretchMode="columnWidth"
-            android:verticalSpacing="10dp">
-        </GridView>
-    </ScrollView>
-</ConstraintLayout>
+        android:layout_height="match_parent"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth">
+    </GridView>
+</LinearLayout>
