--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -15,5 +15,13 @@
   limitations under the License.
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+    <item android:id="@+id/sort_menu"
+        android:title="@string/sort"
+        app:showAsAction="never"
+        app:actionViewClass="android.support.v7.widget.AppCompatSpinner"
+        android:actionLayout="@layout/spinner"
+        />
 </menu>
