--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
     <Spinner
         android:id="@+id/sort_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:entries="@array/sort_array">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     </Spinner>
 </RelativeLayout>
