--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -20,8 +20,8 @@
     tools:context=".MainActivity">
     <item android:id="@+id/sort_menu"
         android:title="@string/sort"
-        app:showAsAction="never"
-        app:actionViewClass="android.support.v7.widget.AppCompatSpinner"
+        app:showAsAction="ifRoom"
+        app:actionViewClass="android.widget.Spinner"
         android:actionLayout="@layout/spinner"
         />
 </menu>
