--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="HeadingTheme" parent="@android:style/TextAppearance.Large">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 
 </resources>
