--- a/app/src/main/res/layout/movie.xml
+++ b/app/src/main/res/layout/movie.xml
@@ -1,11 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/movie_grid"
+    <!--<GridView xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:id="@+id/movie_grid"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:numColumns="auto_fit"-->
+        <!--android:stretchMode="columnWidth">-->
+    <!--</GridView>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleMovies"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth">
-    </GridView>
+        android:layout_height="match_parent"/>
 </RelativeLayout>
