Code for Popular Movies 2

--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/grid_item_img"
+        android:id="@+id/item_img"
         android:layout_width="300dp"
         android:layout_height="match_parent" />
 </RelativeLayout>
