--- a/app/src/main/res/layout/movie.xml
+++ b/app/src/main/res/layout/movie.xml
@@ -1,15 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!--<GridView xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:id="@+id/movie_grid"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:numColumns="auto_fit"-->
-        <!--android:stretchMode="columnWidth">-->
-    <!--</GridView>-->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycleMovies"
+<?xml version="1.0" encoding="utf-8"?><!--Use <layout> as the root tag for activity_main to generate the ActivityMainBinding-->
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</RelativeLayout>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleMovies"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#000000"
+            android:gravity="center"
+            android:numColumns="auto_fit"
+            android:stretchMode="spacingWidthUniform" />
+    </FrameLayout>
+</layout>
